Update icon.png and project files

--- a/src/i18n/en_US.json
+++ b/src/i18n/en_US.json
@@ -10,5 +10,23 @@
   "removedData": "Data deleted",
   "confirmRemove": "Confirm to delete the data in ${name}?",
   "insertEmoji": "Insert Emoji",
-  "removeSpace": "Remove Space"
+  "removeSpace": "Remove Space",
+  "click2fill": "Click2Fill",
+  "selectTextFirst": "Please select the text to supplement first",
+  "configure": "Configure",
+  "contentInserted": "Content inserted successfully",
+  "requestFailed": "Request failed",
+  "configSaved": "Configuration saved",
+  "menuName": "Menu Name",
+  "menuUrl": "API URL",
+  "menuMethod": "Request Method",
+  "menuHeaders": "Request Headers",
+  "menuParams": "Request Parameters",
+  "menuResponseType": "Response Type",
+  "menuTemplate": "Insert Template",
+  "addMenu": "Add Menu",
+  "editMenu": "Edit Menu",
+  "deleteMenu": "Delete Menu",
+  "confirmDeleteMenu": "Confirm to delete this menu?",
+  "noMenusConfigured": "No menus configured, please configure first"
 }
