--- a/src/i18n/zh_CN.json
+++ b/src/i18n/zh_CN.json
@@ -10,5 +10,23 @@
   "removedData": "数据已删除",
   "confirmRemove": "确认删除 ${name} 中的数据？",
   "insertEmoji": "插入表情",
-  "removeSpace": "移除空格"
+  "removeSpace": "移除空格",
+  "click2fill": "Click2Fill",
+  "selectTextFirst": "请先选择要补充信息的文本",
+  "configure": "配置",
+  "contentInserted": "内容已成功插入",
+  "requestFailed": "请求失败",
+  "configSaved": "配置已保存",
+  "menuName": "菜单名称",
+  "menuUrl": "API地址",
+  "menuMethod": "请求方法",
+  "menuHeaders": "请求头",
+  "menuParams": "请求参数",
+  "menuResponseType": "响应类型",
+  "menuTemplate": "插入模板",
+  "addMenu": "添加菜单",
+  "editMenu": "编辑菜单",
+  "deleteMenu": "删除菜单",
+  "confirmDeleteMenu": "确认删除此菜单？",
+  "noMenusConfigured": "暂无菜单配置，请先配置菜单"
 }
